# OpenAvnu

./: CMakeLists.txt
daemons/gptp/: CMakeLists.txt
daemons/gptp/common/: avbts_osnet.cpp  avbts_osnet.hpp  avbts_osthread.hpp  common_port.cpp  ether_port.cpp  ether_port.hpp
daemons/gptp/linux/src/: daemon_cl.cpp  linux_hal_common.cpp  linux_hal_common.hpp  linux_hal_generic.cpp  linux_hal_generic.hpp  linux_hal_generic_adj.cpp  socket.cpp
daemons/maap/linux/src/: maap_daemon.c
scripts/: build.sh  clean.sh  prepare-remote-debug.sh
